readded some padding to aggwrap, fixed departmentcontent alignment

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -627,7 +627,7 @@ a.departmentLink h2{
     display:none;
 }
 .departmentContent, .departmentResources {
-  padding: 0 5px;
+  padding: 0 15px;
 }
 .departmentContent p {
   line-height:1.4em;
